[gd_scene load_steps=21 format=2]

[ext_resource path="res://cenas_universais/jogador.tscn" type="PackedScene" id=1]
[ext_resource path="res://cenas_universais/mensagem_derrota.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Retro Gaming.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/plataforma.png" type="Texture" id=4]
[ext_resource path="res://assets/minion_cangaceiro.png" type="Texture" id=5]
[ext_resource path="res://assets/botao_olho_sair.png" type="Texture" id=6]
[ext_resource path="res://assets/botao_menu.png.png" type="Texture" id=7]
[ext_resource path="res://niveis/cordel1/cordel1-nivel3/padroes/nivel3-padrao.gd" type="Script" id=9]
[ext_resource path="res://assets/botao_play.png" type="Texture" id=10]
[ext_resource path="res://assets/tela_comando.png" type="Texture" id=11]
[ext_resource path="res://assets/espaco_instrucoes.png" type="Texture" id=12]
[ext_resource path="res://assets/cenario_batalha.png" type="Texture" id=13]
[ext_resource path="res://assets/instrucoes_borda.png" type="Texture" id=14]
[ext_resource path="res://cenas_universais/mensagem_vitoria.tscn" type="PackedScene" id=15]
[ext_resource path="res://cenas_universais/Dash/dash.tscn" type="PackedScene" id=16]
[ext_resource path="res://cenas_universais/botaoVoltaMenu.tscn" type="PackedScene" id=17]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 16.0

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 39, 38.25 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 3 )

[node name="nivel3-padrao" type="Node2D"]
script = ExtResource( 9 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 225, 162 )
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 13 )

[node name="fundo" type="Sprite" parent="."]
position = Vector2( 256, 150 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )

[node name="s_instrucao1" type="Sprite" parent="fundo"]
position = Vector2( 380, -221 )
scale = Vector2( 2.381, 2 )
texture = ExtResource( 12 )

[node name="borda_instrucao1" type="Sprite" parent="fundo"]
visible = false
position = Vector2( 380.3, -220 )
scale = Vector2( 2.37593, 2 )
texture = ExtResource( 14 )

[node name="s_instrucao2" type="Sprite" parent="fundo"]
position = Vector2( 380, -74 )
scale = Vector2( 2.381, 2 )
texture = ExtResource( 12 )

[node name="borda_instrucao2" type="Sprite" parent="fundo"]
visible = false
position = Vector2( 380.3, -74 )
scale = Vector2( 2.37593, 2 )
texture = ExtResource( 14 )

[node name="s_instrucao3" type="Sprite" parent="fundo"]
position = Vector2( 380, 72 )
scale = Vector2( 2.381, 2 )
texture = ExtResource( 12 )

[node name="borda_instrucao3" type="Sprite" parent="fundo"]
visible = false
position = Vector2( 380.3, 72 )
scale = Vector2( 2.37593, 2 )
texture = ExtResource( 14 )

[node name="cangaceirinho" type="StaticBody2D" parent="."]
position = Vector2( 162, -2 )

[node name="Sprite" type="Sprite" parent="cangaceirinho"]
position = Vector2( 160, 120 )
scale = Vector2( 1.35, 1.35 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="cangaceirinho"]
position = Vector2( 158, 122 )
shape = SubResource( 1 )

[node name="instrucoes" type="Node" parent="."]

[node name="instrucao1" type="Label" parent="instrucoes"]
margin_left = 384.0
margin_top = 9.0
margin_right = 508.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="instrucao2" type="Label" parent="instrucoes"]
margin_left = 384.0
margin_top = 82.0
margin_right = 508.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="instrucao3" type="Label" parent="instrucoes"]
margin_left = 384.0
margin_top = 155.0
margin_right = 508.0
margin_bottom = 217.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="botoes" type="Node" parent="."]

[node name="botao_pronto" type="TextureButton" parent="botoes"]
margin_left = 410.0
margin_top = 224.0
margin_right = 450.0
margin_bottom = 264.0
rect_scale = Vector2( 1.75, 1.75 )
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="botaoVoltaMenu" parent="botoes" instance=ExtResource( 17 )]
margin_left = -11.0
margin_top = -9.0
margin_right = 53.0
margin_bottom = 55.0
rect_scale = Vector2( 1, 1 )
texture_normal = ExtResource( 7 )
script = null
__meta__ = {
"_edit_use_anchors_": true
}

[node name="botao_olho" type="TextureButton" parent="botoes"]
margin_left = 346.0
margin_top = 16.0
margin_right = 386.0
margin_bottom = 56.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="mensagens" type="Node" parent="."]

[node name="mensagem_vitoria" parent="mensagens" instance=ExtResource( 15 )]
visible = false
nivelRestart = "res://niveis/cordel1/cordel1-nivel3/nivel3.tscn"
nivelProximo = "res://niveis/cordel1/bossC/bossCangaceiro.tscn"

[node name="mensagem_derrota" parent="mensagens" instance=ExtResource( 2 )]
visible = false
nivelRestart = "res://niveis/cordel1/cordel1-nivel2/nivel2.tscn"
voltaMenu = "res://menu/menu.tscn"

[node name="pisos" type="Node" parent="."]

[node name="piso_esquerda" type="Area2D" parent="pisos"]
position = Vector2( 48, 155 )
scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="pisos/piso_esquerda"]
scale = Vector2( 6, 5 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pisos/piso_esquerda"]
position = Vector2( 0.5, -69.75 )
shape = SubResource( 3 )

[node name="piso_centro" type="Area2D" parent="pisos"]
position = Vector2( 103, 155 )
scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="pisos/piso_centro"]
scale = Vector2( 6, 5 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pisos/piso_centro"]
position = Vector2( 3, -69.75 )
shape = SubResource( 3 )

[node name="piso_direita" type="Area2D" parent="pisos"]
position = Vector2( 161, 155 )
scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="pisos/piso_direita"]
scale = Vector2( 6, 5 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pisos/piso_direita"]
position = Vector2( 0.5, -69.75 )
shape = SubResource( 3 )

[node name="jogador" parent="." instance=ExtResource( 1 )]
position = Vector2( 46, 117 )

[node name="pergunta" type="Label" parent="."]
margin_left = 45.0
margin_top = 23.0
margin_right = 173.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 256, 152 )
current = true

[node name="Dash" parent="." instance=ExtResource( 16 )]

[connection signal="pressed" from="botoes/botao_pronto" to="." method="_on_botao_pronto_pressed"]
[connection signal="pressed" from="botoes/botao_olho" to="." method="_on_botao_olho_pressed"]
